Fix z-index bug in iOS6

--- a/style/page/off-canvas.less
+++ b/style/page/off-canvas.less
@@ -33,10 +33,6 @@
         pointer-events: auto;
         z-index: 2;
     }
-
-    .ios6 & {
-        z-index: 1;
-    }
 }
 
 .website {
